582864 upgrade several tests to junit 4