@@ -33,7 +33,7 @@ public class MyServiceFactory implements SmartFactoryBean {
     private static final String DELAY_PROP = "org.eclipse.gemini.blueprint.iandt.dependencies.factory.delay"; 
 
     public Object getObject() throws Exception {
-        Integer delay = Integer.getInteger(DELAY_PROP, new Integer(0));
+        Integer delay = Integer.getInteger(DELAY_PROP, Integer.valueOf(0));
         System.getProperties().remove(DELAY_PROP);
         System.out.println("Delaying for:" + delay);
         Thread.sleep(delay.intValue());
